fix currently playing playlist overlay being misaligned

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -440,7 +440,7 @@ html {
     margin-left: 12px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     pointer-events: none;
 }
 
